# IMMUVIS-PIGVAE

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGES_SUMMARY.md  IMC_RECONSTRUCTION_FIXES.md  README.md  hello.py  pyproject.toml
.cursor/rules/: deep-learning.mdc
.github/workflows/: ci.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  gradient_accumulation_scheduler.yaml  interpretability.yaml  learning_rate.yaml  simple_interpretability.yaml
configs/data/: mnist.yaml
configs/deploy/onnx/: eval.yaml  export.yaml  promote.yaml
configs/experiment/: example.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: mnist.yaml  model.yaml
configs/trainer/: default.yaml
notebooks/: file_to_h5.ipynb  test.ipynb  test_v1.ipynb
scripts/: diagnose_imc_data.py
src/: eval.py  main.py  train.py
src/data/: imc_datamodule.py  mnist_datamodule.py
src/data/components/: graphs_datamodules.py
src/deploy/onnx/: eval_onnx.py  export_onnx.py  promote_onnx.py
src/models/: fabric_trainer.py  pigvae_auto_module.py  pigvae_manual_module.py
src/models/components/: custom_graph_transformer.py  custom_pytorch_functions.py  embeddings.py  emdeddings.py  llama_graph_transformer.py  losses.py  model.py  modules.py  plot.py  rotary_embedding.py  schedulers.py  spectral_embeddings.py  warmups.py
src/models/components/metrics/: lie_derivatives.py  lie_equivariance.py  lie_other.py  lie_transforms.py  recontructions.py
src/utils/: instantiators.py  pylogger.py  rich_utils.py  utils.py  warmups.py
src/utils/callbacks/: simple_interpretability.py  transformer_explainability.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: run_if.py
