[project]
name = "immuvis-pigvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "wandb",
    "rootutils",
    "pre-commit",
    "rich",
    "pytest",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "plotly>=6.2.0",
    "einops>=0.8.1",
    "ruff>=0.12.2",
]
